Fix footer padding on mobile

--- a/styles/all.css
+++ b/styles/all.css
@@ -232,7 +232,7 @@ body{
     }
     footer {
         height: 100% !important;
-        padding-top: 10px !important;
+        padding-top: 100px !important;
     }
 }
 @media(max-width:425px){
